--- a/public/15puzzle.html
+++ b/public/15puzzle.html
@@ -6,13 +6,14 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
           integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
           crossorigin="anonymous">
+    <link rel="stylesheet" href="15puzzle.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
-<div class="container 15Puzzle" id="puzzle"></div>
-<script src="/build/init.js"></script>
-<script src="/build/15-puzzle-bundle.js"></script>
+<div class="container text-center Puzzle15" id="puzzle"></div>
+<script src="/public/init.js"></script>
+<script src="/public/15puzzle-bundle.js"></script>
 
 </body>
 </html>
