add vertical align on page for puzzle

--- a/public/15puzzle.html
+++ b/public/15puzzle.html
@@ -11,7 +11,12 @@
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 </head>
 <body>
-<div class="container text-center Puzzle15" id="puzzle"></div>
+<div class="container">
+    <div class="container puzzle-container text-center Puzzle15" id="puzzle">
+</div>
+
+
+</div>
 <script src="/public/init.js"></script>
 <script src="/public/15puzzle-bundle.js"></script>
 
