Add animation and interaction

--- a/public/15puzzle.html
+++ b/public/15puzzle.html
@@ -7,8 +7,8 @@
           integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
           crossorigin="anonymous">
     <link rel="stylesheet" href="15puzzle.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>-->
+    <!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
 </head>
 <body>
 <div class="container">
