Update for test

--- a/public/15puzzle.html
+++ b/public/15puzzle.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"
           integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ=="
           crossorigin="anonymous">
-    <link rel="stylesheet" href="15puzzle.css">
+    <!--<link rel="stylesheet" href="15puzzle.css">-->
     <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>-->
     <!--<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>-->
 </head>
@@ -17,8 +17,8 @@
 
 
 </div>
-<script src="/public/init.js"></script>
-<script src="/public/15puzzle-bundle.js"></script>
+<script src="./init.js"></script>
+<script src="./15puzzle-bundle.js"></script>
 
 </body>
 </html>
